2015-09-17  Charlie Zender  <zender@uci.edu>

	* Document regional features NSEW in nco.texi


	* round() integer-type extensive variables

2015-09-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha03 final changes';git push
	git tag -a 4.5.3-alpha03 -m 'Version 4.5.3-alpha03 tag: --xtn --extensive, ncks HINT, ncecat --gag fix';git push --tags

	* Add regression test (the first one!) for ncecat --gag

	* Reset rcd in ncecat after checking for group existence. Caused ncecat --gag to die. Problem introduced in 4.4.9 on 20150515, and reported by Huan Wu.

	* ncks exit with error when regridding specified without output file

2015-09-15  Charlie Zender  <zender@uci.edu>

	* Implement SLD stubs in nco_grd_nfr()

	* Check return codes in sld_nco.sh

	* Fix grid infer problem caused by segregating lat_typ from grd_typ

2015-09-14  Charlie Zender  <zender@uci.edu>

	* Diagnosed lat, lon, 2D grid-types now self-consistent for regional grids

	* Clean-up sld_nco.sh, better segregate nco_2d_grd_typ from nco_lat_grd_typ

2015-09-11  Charlie Zender  <zender@uci.edu>

	* Add sld_nco.sh script for Swath-Like Data processing to nco/data

2015-09-11  Henry Butowsky  <henryb@hush.com>

	* mods to ncap_var_lgcl() - original version convered all var type to NC_SHORT and then evaluated boolean
	problem with this is that when reducing precision say from float to short a large _FillValue say 9.9e20f
	would be converted to 0s. This leads propblems in if(). New version  evaluates for each type

2015-09-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha02 final changes';git push
	git tag -a 4.5.3-alpha02 -m 'Version 4.5.3-alpha02 tag: SLD regrid sort-of works for AIRS';git push --tags

	* nco_grd_nfr() produces reasonable numbers for AIRS test case!

	* Fix area output and improve metadata output in nco_grd_nfr()
